--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/gallery/fulls/the_boys.jpg" alt="" />
 						</div>
 					</section>
 
@@ -74,7 +74,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/gallery/full/Pim_monument.jpg" alt="" />
 						</div>
 					</section>
 
