--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Machine Learning Methods</h3>
+									<p>Extensive knowledge of the application of different machine learning architectures, their strengths, weaknesses and how to combine them.</p>
 								</section>
 							</div>
 						</div>
