--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/gallery/fulls/Rosita_effect.JPG" alt="" />
 						</div>
 					</section>
 
@@ -262,11 +262,11 @@
 						<div class="inner">
 							<h2>Skill set</h2>
 							<p>
-								Below is a listing of relevant technical skills I have acquired over the years, both through my studies and personal interest.
+								Below is a listing of relevant skills I have acquired over the years, both through my studies and personal interest.
 							</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon solid style2 major fa-cog"></span>
+									<span class="icon solid style2 major fa-user"></span>
 									<h3>User Research</h3>
 									<p>Setting up different kinds of surveys, conducting intervies, guiding focus groups and leading brainstorming sessions. These are all among the skills I possess.</p>
 									</section>
@@ -277,12 +277,12 @@
 									<p>I have experience in both imperative programming, as well as functional programming.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
+									<span class="icon solid style2 major fa-database"></span>
 									<h3>Data Mining</h3>
 									<p>Experience in traditional data mining methods, as well as engineering methods, using SQL, Hadoop and Apache Spark.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
+									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Data Visualisation</h3>
 									<p>I posses extensive knowledge on the underlying principles of what makes an effective data visualisation, alongside the skills to implement these in Javascript (D3.js) and/or Python (mainly Seaborn, matplotlib).</p>
 								</section>
@@ -292,7 +292,7 @@
 									<p>From Figma and Miro, to more overarching principles of user research, I offer these capabilities</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
+									<span class="icon solid style2 major fa-brain"></span>
 									<h3>Machine Learning Methods</h3>
 									<p>Extensive knowledge of the application of different machine learning architectures, their strengths, weaknesses and how to combine them.</p>
 								</section>
@@ -305,7 +305,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/cis-van-aken/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="cjf.vanaken@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:cjf.vanaken@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
