--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
 							<p class="medium"> B.Sc. in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
-								<li><a href="files/cv_nl.pdf" class="button">See My CV</a></li>
+								<li><a href="files/cv_en.pdf" class="button">See My CV</a></li>
 							</ul>
 						</div>
 						<div class="image">
