Updated the gallery

--- a/index.html
+++ b/index.html
@@ -110,36 +110,36 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="images/gallery/papers/tram_munchen.jpg" class="image">
+										<img src="images/gallery/papers/tram_munchen.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>My Photography</h3>
-										<p>I am mainly a hobby photographer and editor, here are some of the photos I have taken.</p>
+										<h3>Munich - 2024</h3>
+										<p>A snapshot of an empty tram</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images/gallery/fulls/monkey.jpg" class="image">
+										<img src="images/gallery/fulls/monkey.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Wildlands Emmen- 2024</h3>
+										<p>A random Monkey.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="images/gallery/fulls/vlinder-3.jpg" class="image">
+										<img src="images/gallery/fulls/vlinder-3.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Wildlands Emmen - 2024</h3>
+										<p>Sharp still of a flying butterfly</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
