--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 								<li><a href="https://www.linkedin.com/in/cis-van-aken/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:cjf.vanaken@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Cis van Aken. Base desing taken from: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
