Updated the gallery

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/monkey.jpg" class="image">
-										<img src="images/gallery/fulls/monkey.jpg" alt="" />
+										<img src="images/gallery/thumbs/monkey.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Wildlands Emmen- 2024</h3>
@@ -135,7 +135,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/vlinder-3.jpg" class="image">
-										<img src="images/gallery/fulls/vlinder-3.jpg" alt="" />
+										<img src="images/gallery/thumbs/vlinder-3.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Wildlands Emmen - 2024</h3>
@@ -146,60 +146,60 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+									<a href="images/gallery/fulls/toren.jpg" class="image">
+										<img src="images/gallery/thumbs/toren.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Prague - 2024</h3>
+										<p>Tower I saw on the way. It provided a nice blend of the modern and the old within Prague.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
+									<a href="images/gallery/fulls/bloem.jpg" class="image">
+										<img src="images/gallery/thumbs/bloem.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Flower on the way</h3>
+										<p>I tried to get as sharp as possible of a closeup with the camera equipment I had available.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
+									<a href="images/gallery/fulls/elbphilharmoie.jpg" class="image">
+										<img src="images/gallery/thumbs/elbphilharmonie.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Elbhilharmony Concert Hall, Hamburg</h3>
+										<p>LWhen I saw the building, I found it pretty impressive looking and I wanted to snatch a picture of it, here's the result.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
+									<a href="images/gallery/fulls/waalbrug.jpg" class="image">
+										<img src="images/gallery/thumbs/waalbrug.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Waalbrug, Nijmegen</h3>
+										<p>I tried to capture the atmosphere of the setting sun behind Nijmegen's icon in this image. I feel like I succeeded.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
+									<a href="images/gallery/fulls/st pauli.jpg" class="image">
+										<img src="images/gallery/thumbs/st pauli.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>St Pauli, Hamburg</h3>
+										<p>When I took this picture, I wanted it to feel more vintage, like the picture was taken years ago, instead of last Winter. I do not think it is perfect, but I did achieve what I wanted to.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
