--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/vlinder-3.jpg" class="image">
-										<img src="images/gallery/thumbs/vlinder-3.jpg" alt="" />
+										<img src="images/gallery/thumbs/vlinder.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Wildlands Emmen - 2024</h3>
@@ -170,7 +170,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/elbphilharmoie.jpg" class="image">
+									<a href="images/gallery/fulls/elbphilharmonie.jpg" class="image">
 										<img src="images/gallery/thumbs/elbphilharmonie.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -182,8 +182,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/waalbrug.jpg" class="image">
-										<img src="images/gallery/thumbs/waalbrug.jpg" alt="" />
+									<a href="images/gallery/fulls/waalbrug.png" class="image">
+										<img src="images/gallery/thumbs/waalbrug.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Waalbrug, Nijmegen</h3>
