--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 						<!-- Gallery -->
 						<h2>Gallery</h2>
-						<p>A small selection of my photography.</p>
+						<p>A small selection of my photography. I am a hobbyist, that is teaching himself the basics of photography and editing.</p>
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 
 								<article>
