--- a/HTML/about.html
+++ b/HTML/about.html
@@ -36,7 +36,7 @@
             Through the Masters, I obtained the necessary skills in user research, prototyping and Human Centered software and design principles to hopefully achieve my goals.</p>
         </div>
         <div class="image">
-            <img src="../images/myself/selfie.png" alt="" />
+            <img src="../images/gallery/myself/selfie.png" alt="" />
         </div>
     </section>
 
@@ -70,7 +70,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="../images/gallery/full/Lars_monument.jpg" alt="" />
+            <img src="../images/gallery/fulls/Lars_monument.jpg" alt="" />
         </div>
     </section>
 
