--- a/HTML/about.html
+++ b/HTML/about.html
@@ -22,7 +22,7 @@
         </div>
     </section>
 
-    <section class="spotlight style4 orient-right content-align-left image-position-right onscroll-image-fade-in" id="first">
+    <section class="spotlight style1 orient-right content-align-left image-position-right onscroll-image-fade-in" id="first">
         <div class="content">
             <header>
                 <h1>My Education</h1>
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <section class="spotlight style4 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
+    <section class="spotlight style4 orient-left content-align-left image-position-left onload-image-fade-in onload-content-fade-right">
         <div class="content">
             <header>
                 <h1>Work Experience</h1>
