--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="content">
 							<h1>Welcome to my site</h1>
 							<p class="major">Cis van Aken.</p>
-							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
+							<p class="medium"> Master of Science Student in Human Computer Science, department of Information Sciences, Utrecht University. </p>
 							<p class="medium"> B.Sc. in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
 								<li><a href="files/cv_en.pdf" class="button">See My CV</a></li>
